[SYNCOPE-1619] SearchPanel improvement (#243)